[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "token-ledger"
version         = "0.2.0"
description     = "Token usage and cost tracking decorator for LLM applications"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [
    { name = "Aleem Pasha", email = "you@email.com" }
]
keywords        = [
    "llm", "openai", "anthropic", "gemini",
    "cost", "tokens", "tracking", "observability", "decorator"
]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []   # zero hard dependencies — everything is optional

[project.optional-dependencies]
openai      = ["openai>=1.0"]
anthropic   = ["anthropic>=0.20"]
gemini      = ["google-genai>=0.3"]
litellm     = ["litellm>=1.0"]
tiktoken    = ["tiktoken>=0.5"]
huggingface = ["transformers>=4.30"]
all         = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-genai>=0.3",
    "litellm>=1.0",
    "tiktoken>=0.5",
]
dev = ["pytest", "pytest-asyncio", "tiktoken"]

[project.urls]
Homepage      = "https://github.com/aleempasha2772/token-ledger"
Repository    = "https://github.com/aleempasha2772/token-ledger"
Documentation = "https://github.com/aleempasha2772/token-ledger#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/token_ledger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
